[package]
name = "pod-env"
version = "0.1.0"
authors = ["nattatorn.yuch"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
kube = { version = "0.52.0", default-features = false, features = ["rustls-tls"] }
kube-runtime = { version = "0.52.0", default-features = false, features = ["rustls-tls"] }
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
tokio = { version = "1.0.1", features = ["full"] }
color-eyre = "0.5.10"
futures = "0.3.8"
env_logger = "0.8.2"
log = "0.4.11"